added contents for device input configs
